--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <a rel="noopener noreferrer"  href="https://www.wakanim.tv/fr/v2/">
                     <div class="link" tabindex="7">wakanim</div>
                 </a>
+                <a rel="noopener noreferrer"  href="https://adkami.com/">
+                   <div class="link" tabindex="7">adkami</div>
+                </a>
             </div>
 
             <div class="center-box">
